<resources>
    <string name="app_name">Slopalia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="filters_title">Filters</string>
    <string name="value_title">Value</string>
    <string name="minimum_hint">Min</string>
    <string name="maximum_hint">Max</string>
    <string name="description_title">Description</string>
    <string name="description_filter_hint">Substring</string>
    <string name="categories_title">Categories</string>
    <string name="date_title">Date</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="money_available_per_day">Money available per day</string>
    <string name="temporarily_unknown">¿?</string>
    <string name="days_for_recovery">Days for recovery</string>
    <string name="surplus_per_day">Surplus per day</string>
    <string name="new_entry">New entry</string>
    <string name="New_periodic_entry">New periodic entry</string>
    <string name="set_date_title">Set date</string>
    <string name="set">Set</string>
    <string name="choose_category_to_eliminate">Choose the category to be eliminated</string>
    <string name="default_erasable_hint">Name</string>
    <string name="current_money_title">Current money</string>
    <string name="information">Information</string>
    <string name="first_configuration_information">We need to know your current money in order to apply the changes with a base number. Remember to include all your money, not just the money in the bank.</string>
    <string name="outgoings_title">Outgoings</string>
    <string name="incomes_title">Incomes</string>
    <string name="category_title">Category</string>
    <string name="cancel_title">Cancel</string>
    <string name="apply_title">Apply</string>
    <string name="category_name">Category name</string>
    <string name="add_item">Add item</string>
    <string name="income_categories_title">Income categories</string>
    <string name="third_configuration_information">It is also possible to customize income categories. You have to add one at least now but it is possible to change them later.</string>
    <string name="outgoing_categories_title">Outgoing categories</string>
    <string name="second_configuration_information">We allows that you customize the categories of your outgoings and we request the maximum money you want to spend per month to improve your money management. You can also set subcategories to specify even more in what you spend the money but the borderline would be apply to the category in general. You have to add one at least now but it is possible to change them later.</string>
    <string name="add_new_category">Add new category</string>
    <string name="reset_current_money_title">Reset current money</string>
    <string name="right_current_money">Right current money</string>
    <string name="refresh_title">Refresh</string>
    <string name="edit">Edit</string>
    <string name="popup_menu">Popup menu</string>
    <string name="subcategories">Subcategories</string>
    <string name="expand">expand</string>
    <string name="add_outgoing_category">Add outgoing category</string>
    <string name="add_income_category">Add income category</string>
    <string name="add_subcategory">Add subcategory</string>
    <string name="money_controllers_title">Money controllers</string>
    <string name="next_window">Next window</string>
    <string name="previous_window">Previous window</string>
    <string name="complete_the_field">Complete the field</string>
    <string name="periodic_entries">Periodic entries</string>
    <string name="money_controllers">Money controllers</string>
    <string name="close_dialog">Close dialog</string>
    <string name="edit_periodic_entry">Edit periodic entry</string>
    <string name="outgoing">Outgoing</string>
    <string name="income">Income</string>

    <string-array name="periodic_types">
        <item>Annual</item>
        <item>Monthly</item>
        <item>Weekly</item>
    </string-array>
</resources>
