<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/erasableItemContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonEditItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextErasableItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/default_erasable_hint"
            android:inputType="text"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButtonEditItem"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#00000000"
        android:contentDescription="@string/edit"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonRemoveItem"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonRemoveItem"
        app:layout_constraintTop_toTopOf="@+id/imageButtonRemoveItem"/>

    <ImageButton
        android:id="@+id/imageButtonRemoveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/remove"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/remove"
        app:layout_constraintBottom_toBottomOf="@+id/erasableItemContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/erasableItemContainer" />

</android.support.constraint.ConstraintLayout>