<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/incomeCategoriesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/income_categories_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/information"
        android:src="@android:drawable/ic_menu_info_details"
        app:layout_constraintBottom_toBottomOf="@+id/incomeCategoriesTitle"
        app:layout_constraintStart_toEndOf="@+id/incomeCategoriesTitle"
        app:layout_constraintTop_toTopOf="@+id/incomeCategoriesTitle" />

    <TextView
        android:id="@+id/incomeCategoriesDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/third_configuration_information"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeCategoriesTitle" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewIncomeCategoriesRequest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeCategoriesDescription" />

</android.support.constraint.ConstraintLayout>